--- a/views/users/all.jade
+++ b/views/users/all.jade
@@ -4,6 +4,5 @@ block content
     h1.
         User List
     ul
-        each user, i in userlist
-            li
-                a(href="mailto:#{user.email}")= user.username
+        each user, i in users
+            li Welcome to  #{user.username}
