--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='http://yui.yahooapis.com/pure/0.6.0/pure-min.css')
   body
     block content
