--- a/views/users/add.jade
+++ b/views/users/add.jade
@@ -2,7 +2,9 @@ extends ../layout
 
 block content
     h1= title
-    form#formAddUser(name="addSubmit", method="post", action="/users/addSubmit")
+    form.pure-form(name="addSubmit", method="post", action="/users/addSubmit")
+      fieldset
+        legend= title
         input#inputUserName(type="text", placeholder="username", name="username")
         input#inputUserEmail(type="password", placeholder="password", name="password")
-        button#btnSubmit(type="submit") submit
+        button.pure-button.pure-button-primary(type="submit") submit
