--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,31 @@
 body {
+  background-image: ;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+#full-screen-background-image {
+  z-index: -999;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 a {
   color: #00B7FF;
+}
+
+form, p {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 13%;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
 }
