--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='http://yui.yahooapis.com/pure/0.6.0/pure-min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
     block content
