--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   background-image: ;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #000000;
 }
 
 #full-screen-background-image {
@@ -19,13 +20,23 @@ a {
   color: #00B7FF;
 }
 
+.b1 {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 3px;
+  width: 40%;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 form, p {
   margin-left: auto;
   margin-right: auto;
-  max-width: 13%;
+  max-width: 35%;
   text-align: center;
 }
 
-h1 {
+h1, legend {
   text-align: center;
+  color: #ffffff;
 }
