--- a/views/users/add.jade
+++ b/views/users/add.jade
@@ -1,10 +1,10 @@
 extends ../layout
 
 block content
+  div.b1
     h1= title
     form.pure-form.pure-form-stacked(name="addSubmit", method="post", action="/users/addSubmit")
       fieldset
-        legend= title
         input(type="text", placeholder="username", name="username")
         input(type="password", placeholder="password", name="password")
         button.pure-button.pure-button-primary(type="submit") submit
