--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,9 @@
-doctype html
-html
-	head
-		title Our Phaser Game
-		script(src='javascripts/phaser/phaser.js')
-		script(src='javascripts/game/states/menu.js')
-		script(src='javascripts/game/states/start.js')
-		script(src='javascripts/game/states/options.js')
-		script(src='javascripts/game/states/help.js')
-		script(src='javascripts/game/game.js')
-		block content
+extends layout
+
+block content
+	script(src='javascripts/phaser/phaser.js')
+	script(src='javascripts/game/states/menu.js')
+	script(src='javascripts/game/states/start.js')
+	script(src='javascripts/game/states/options.js')
+	script(src='javascripts/game/states/help.js')
+	script(src='javascripts/game/boot.js')
