--- a/views/users/add.jade
+++ b/views/users/add.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   div.b1
     h1= title
-    form.pure-form.pure-form-stacked(name="addSubmit", method="post", action="/users/addSubmit")
+    form.pure-form.pure-form-stacked(name="add", method="post", action="/users/add")
       fieldset
         input(type="text", placeholder="username", name="username")
         input(type="password", placeholder="password", name="password")
