--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   div.b1
     h1= title
-    form.pure-form.pure-form-stacked(name="loginSubmit", method="post", action="/users/loginSubmit")
+    form.pure-form.pure-form-stacked(name="login", method="post", action="/users/login")
       fieldset
         input(type="text", placeholder="username", name="username")
         input(type="password", placeholder="password", name="password")
