--- a/views/game.jade
+++ b/views/game.jade
@@ -1,3 +1,9 @@
 extends layoutgame
+
+block script
+	script(src='javascripts/phaser/phaser.js')
+	script(src='javascripts/phaser/phaser-plugin-isometric.js')
+	script(src='javascripts/game/game.js')
+	
 h1= title
 canvas
