--- a/views/layoutgame.jade
+++ b/views/layoutgame.jade
@@ -1,10 +1,10 @@
 doctype html
 html
-    head
-      title= title
-      script(src='javascripts/phaser/phaser.js')
-      script(src='javascripts/game/game.js')
-      link(rel='stylesheet', href='/stylesheets/style.css')
-      
-    body
-      img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
+	head
+		title= title
+		block script
+		link(rel='stylesheet', href='/stylesheets/launcher.css')
+
+	body
+		img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
+		block content
