--- a/views/layoutgame.jade
+++ b/views/layoutgame.jade
@@ -2,6 +2,7 @@ doctype html
 html
     head
       title= title
+      script(src='/socket.io/socket.io.js')
       script(src='javascripts/phaser/phaser.js')
       script(src='javascripts/game/game.js')
       link(rel='stylesheet', href='/stylesheets/style.css')
