Placement de l'interface et du terrain isométrique (visuel dans la cité)

--- a/views/layoutgame.jade
+++ b/views/layoutgame.jade
@@ -5,6 +5,7 @@ html
 		block script
 		link(rel='stylesheet', href='http://yui.yahooapis.com/pure/0.6.0/pure-min.css')
 		link(rel='stylesheet', href='/stylesheets/launcher.css')
+		link(rel='stylesheet', href='/stylesheets/game.css')
 
 	body
 		img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
