création de la room d'attente de systeme solaire, affichage des utilisateurs connectés

--- a/views/users/start.jade
+++ b/views/users/start.jade
@@ -4,13 +4,15 @@ block content
   script(src='https://cdn.socket.io/socket.io-1.2.0.js')
   script(src='http://code.jquery.com/jquery-1.11.1.js')
   script(type='text/javascript').
-    var socket = io();
     var username='#{user.username}';
+    
+    var socket = io();
     socket.emit('start', username );
     socket.on('start connected', function(usernames){
       console.log('Du nouveau!');
       for(i in usernames) {
         console.log(usernames[i]);
+        $('#users').append($('<li>').text(usernames[i]));
       }
     })
   h1 Welcome to  #{user.username}
@@ -20,3 +22,4 @@ block content
     li #{user.password}
     li #{user._id}
     li #{user.planets}
+  ul#users
