--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   background-image: ;
-  padding: 50px;
+  padding: 40px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #000000;
 }
@@ -18,6 +18,7 @@ body {
 
 a {
   color: #00B7FF;
+  display:block;
 }
 
 .b1 {
