--- a/views/layouts/layoutgame.jade
+++ b/views/layouts/layoutgame.jade
@@ -3,7 +3,7 @@ html
 	head
 		title= title
 		block script
-		link(rel='stylesheet', href='http://yui.yahooapis.com/pure/0.6.0/pure-min.css')
+		link(rel='stylesheet', href='/stylesheets/pure-min.css')
 		link(rel='stylesheet', href='/stylesheets/launcher.css')
 		link(rel='stylesheet', href='/stylesheets/game.css')
 
