--- a/views/users/chat.jade
+++ b/views/users/chat.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../layouts/layout
 block content
   script(src='https://cdn.socket.io/socket.io-1.2.0.js')
   script(src='http://code.jquery.com/jquery-1.11.1.js')
