--- a/views/users/start.jade
+++ b/views/users/start.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../layouts/layout
 
 block content
   script(src='https://cdn.socket.io/socket.io-1.2.0.js')
@@ -29,7 +29,7 @@ block content
       socket.emit('start', username);
     })
     socket.on('start ready', function(){
-      $('body').append($('<a class="button-success pure-button" href="/game">Start game!</a>'))
+      $('body').append($('<a class="button-success pure-button" href="/launcher">Start game!</a>'))
       $('body').loading('stop');
     })
     
