Recentrage du game.js pour les barres

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -4,8 +4,8 @@ h1= title
 block script
 	script(src='https://cdn.socket.io/socket.io-1.2.0.js')
 	script(src='http://code.jquery.com/jquery-1.11.1.js')
-	script(src='javascripts/phaser/phaser.js')
-	script(src='javascripts/phaser/phaser-plugin-isometric.js')
-	script(src='javascripts/game/game.js')
+	script(src='../javascripts/phaser/phaser.js')
+	script(src='../javascripts/phaser/phaser-plugin-isometric.js')
+	script(src='../javascripts/game/game.js')
 			
 canvas
