nouvelle side-bar

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -7,5 +7,35 @@ block script
 	script(src='../javascripts/phaser/phaser.js')
 	script(src='../javascripts/phaser/phaser-plugin-isometric.js')
 	script(src='../javascripts/game/game.js')
-			
-canvas
+	
+	.pure-g
+		.pure-u-4-5#parent
+		.pure-u-1-5.pure-menu.custom-restricted-width
+				a.pure-menu-heading(href='/') Pure
+				ul.pure-menu-list
+					li.pure-menu-item
+						a.pure-menu-link(href='/start/') Get Started
+					li.pure-menu-item
+						a.pure-menu-link(href='/layouts/') Layouts
+					li.pure-menu-item.menu-item-divided
+						a.pure-menu-link(href='/base/') Base
+					li.pure-menu-item
+						a.pure-menu-link(href='/grids/') Grids
+					li.pure-menu-item
+						a.pure-menu-link(href='/forms/') Forms
+					li.pure-menu-item
+						a.pure-menu-link(href='/buttons/') Buttons
+					li.pure-menu-item
+						a.pure-menu-link(href='/tables/') Tables
+					li.pure-menu-item.pure-menu-selected
+						a.pure-menu-link(href='/menus/') Menus
+					li.pure-menu-item.menu-item-divided
+						a.pure-menu-link(href='/tools/') Tools
+					li.pure-menu-item
+						a.pure-menu-link(href='/customize/') Customize
+					li.pure-menu-item
+						a.pure-menu-link(href='/extend/') Extend
+					li.pure-menu-item
+						a.pure-menu-link(href='http://blog.purecss.io/') Blog
+					li.pure-menu-item
+						a.pure-menu-link(href='https://github.com/yahoo/pure/releases/') Releases	
