--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,5 +1,25 @@
 canvas
 {
 	border: 3px solid black;
-	margin-top: 20px;
+	/*margin-top: 20px;*/
+	display: inline-block;
+	margin: 0;
+}
+.custom-restricted-width {
+  font-size: 1em;
+  display: inline-block;
+	background-color: rgba(0, 0, 0, 0.7);
+	border-radius: 3px;
+	/*width: 40%;
+	padding: 10px;
+	margin-left: auto;
+	margin-right: auto;*/
+	/*margin-left: -160px;
+  width: auto;
+  position: fixed;
+  top: 0;
+  right: 0;*/
+}
+#parent {
+	display: inline-block;
 }
