Switch vers la cité

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -44,3 +44,4 @@ block script
 				ul.pure-menu-list#ressources
 					li.pure-menu-heading my ressources
 				button.pure-button(onclick="start('planets');") Planets
+				button.pure-button(onclick="start('city');") City
