--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -10,12 +10,11 @@ block script
 
 		var username = '#{username}';
 		var solar_system = '#{solar_system}';
-		socket.emit('game', username, solar_system);
-		// load all users of the game
+		socket.emit('game', username, solar_system);  // load all users of the game
 		socket.on('data', function(users){
 				users = users;	//global
 				for(var i in users) {
-					//console.log(JSON.stringify(users[i],null, 4));	// so that the display is pretty
+					console.log(JSON.stringify(users[i],null, 4));	// so that the display is pretty
 					//	display planets of the logged in user
 					if(users[i].username == username){
 						for( var k in users[i].planets ){
