Premiers tests WebPd

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -4,8 +4,9 @@ html
 		title= title
 		link(rel='stylesheet', href='/stylesheets/pure-min.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
-		block script
+		block libs
 
 	body
 		img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
 		block content
+		block script
