--- a/views/layouts/layoutgame.jade
+++ b/views/layouts/layoutgame.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	head
 		title= title
+		block libs
 		block script
 		link(rel='stylesheet', href='/stylesheets/pure-min.css')
 		link(rel='stylesheet', href='/stylesheets/launcher.css')
