Première interaction entre les données et Phaser Effet : juste un ajout d'une variable globale pour récupérer les données de l'utilisateur --> À voir pour trouver un moyen plus pratique s'il existe Les Kaga affichés sont maintenant ceux du joueur en question
Autres actions : restructuration des images

--- a/views/layouts/layoutgame.jade
+++ b/views/layouts/layoutgame.jade
@@ -9,5 +9,5 @@ html
 		link(rel='stylesheet', href='/stylesheets/game.css')
 
 	body
-		img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
+		img#full-screen-background-image(alt="full screen background image", src="/images/backgrounds/planets.jpg")
 		block content
