--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -7,6 +7,6 @@ html
 		block libs
 
 	body
-		img#full-screen-background-image(alt="full screen background image", src="/images/planets.jpg")
+		img#full-screen-background-image(alt="full screen background image", src="/images/backgrounds/planets.jpg")
 		block content
 		block script
