--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,8 +50,34 @@ canvas {
 .button-success {
   background: rgb(28, 184, 65); /* this is a green */
 }
+margin-left: auto;
 
 .custom-restricted-width {
   font-size: 2em;
   display: inline-block;
+}
+
+ #g {
+   font-size: 2em;
+   margin-right: auto;
+   min-height: 100% ;
+
+ }
+
+.footer{
+  display: inline-block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  padding-left: 0%;
+}
+
+.pfooter{
+  max-width: 100%;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  padding-left: 0px;
+  text-align: left;
+  font-size: 5em;
 }
