Ajout des boutons manquants (Add - Login) Tentative : topbar dynamique

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -30,8 +30,9 @@ block content
 	.pure-g
 		.pure-u-4-5#parent
 		.pure-u-1-5.pure-menu.custom-restricted-width
+				span.pure-menu-heading players
 				ul.pure-menu-list#players
-					li.pure-menu-heading players
+					li.pure-menu-item.list #{username}
 				ul.pure-menu-list#planets
 					li.pure-menu-heading my planets
 				ul.pure-menu-list#ressources
