ajout titre + phrase cool dans index

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,9 @@
 extends layouts/layout
 
 block content
+	.divtitle
+		img.title(src='/images/assets/erkma.png')
 	a.button(href='/users/login') Login
 	a.button(href='/users/add') Add
-	
 	footer.footer
-		p.pfooter La phrase super cool!!!
+		p.pfooter Périples futures ... Victoires prochaines !
