--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,5 +79,18 @@ margin-left: auto;
   margin-bottom: 10px;
   padding-left: 0px;
   text-align: left;
-  font-size: 5em;
+  font-size: 3em;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.divtitle{
+  margin: auto;
+  width: 70%;
+}
+
+.title{
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+  margin: 5%;
+  width: 90%;
 }
