--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Arista';
+    src: url('/fonts/arista_2_0/Arista2.0 light.ttf');
+}
+
 body {
   background-image: ;
   padding: 40px;
@@ -74,13 +79,14 @@ margin-left: auto;
 }
 
 .pfooter{
+  font-family: "Arista";
   max-width: 100%;
   margin-left: 10px;
   margin-bottom: 10px;
   padding-left: 0px;
   text-align: left;
   font-size: 3em;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(140, 200, 255, 0.7);
 }
 
 .divtitle{
