ajout de gulp et de la minimisation des fichiers js clients

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,9 @@ extends layouts/layout
 block content
 	.divtitle
 		img.title(src='/images/assets/erkma.png')
-	a.button(href='/users/login') Login
+	a.button(href='/users/login')
+		img(src='/images/buttons/loginButton.png')
 	a.button(href='/users/add') Add
+		img(src='/images/buttons/addButton.png')
 	footer.footer
 		p.pfooter Périples futures ... Victoires prochaines !
