debut du travail sur attaque et commerce

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -37,7 +37,10 @@ block content
 					li.pure-menu-heading my planets
 				ul.pure-menu-list#ressources
 					li.pure-menu-heading my ressources
-				button.pure-button(onclick="start('planets');") Planets
+				button.pure-button(onclick="start('planets');") Planets 
 				button.pure-button(onclick="start('city');") City
+				br
+				button.pure-button(onclick="start('attaque');") Attaque 
+				button.pure-button(onclick="start('commerce');") Commerce
 	// WebPd
 	script(src='../javascripts/webpd/loadPatches.js')
