ajout socket io update users data

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -9,8 +9,6 @@ block libs
 block script
 	// Server
 	script(type='text/javascript').
-		// start connection to the server
-		var socket = io();
 
 		username = '#{username}'; // all variable might be global so no "var"
 		solar_system = !{JSON.stringify(solar_system)};
@@ -22,6 +20,23 @@ block script
 		}
 		//console.log(JSON.stringify(solar_system.users[i], null, 2));
 
+		// start connection to the server
+		var socket = io();
+		function askUpdate(){
+			socket.emit('game', solar_system._id);
+		}
+		var a;
+		function realTime(){
+		  a = setInterval(askUpdate, 1000);
+		}
+		
+		realTime();
+		
+		socket.on('gameSend', function(solar_system){
+			solar_system = solar_system;
+			//console.log(JSON.stringify(solar_system, null, 4));
+		})
+		
 	// Phaser
 	script(src='../javascripts/phaser/phaser.js')
 	script(src='../javascripts/phaser/phaser-plugin-isometric.js')
