les bouttons renvoient maintenant sur deux states

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -29,6 +29,8 @@ block script
 	script(src='../javascripts/webpd/pd-fileutils.js')
 	script(src='../javascripts/game/states/city.js')
 	script(src='../javascripts/game/states/planets.js')
+	script(src='../javascripts/game/states/attaque.js')
+	script(src='../javascripts/game/states/commerce.js')
 	script(src='../javascripts/game/game.js')
 
 block content
@@ -44,13 +46,14 @@ block content
 				span.pure-menu-heading my ressources
 				ul.pure-menu-list#ressources
 
-					li.pure-menu-heading my ressources
+					//li.pure-menu-heading my ressources
 				button.pure-button(onclick="start('planets');") Planets 
-
 				button.pure-button(onclick="start('city');") City
 				br
 				button.pure-button(onclick="start('attaque');") Attaque 
 				button.pure-button(onclick="start('commerce');") Commerce
+				
+				
 	// WebPd
 	script(src='../javascripts/webpd/loadPatches.js')
 	script(type='text/javascript').
