Placement des batiments initialisé Ajout d'un dossier de variables javascript globales (javascripts/db)

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -27,6 +27,7 @@ block script
 	script(src='../javascripts/phaser/phaser-plugin-isometric.js')
 	script(src='../javascripts/webpd/webpd-latest.js')
 	script(src='../javascripts/webpd/pd-fileutils.js')
+	script(src='../javascripts/game/db/map.js')
 	script(src='../javascripts/game/states/city.js')
 	script(src='../javascripts/game/states/planets.js')
 	script(src='../javascripts/game/game.js')
