--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,20 @@
 extends layouts/layout
 
+block libs
+	script(src='../javascripts/jquery.min.js')
+
 block content
 	.divtitle
 		img.title(src='/images/assets/erkma.png')
-	a.button(href='/users/login')
-		img(src='/images/buttons/loginButton.png')
-	a.button(href='/users/add') Add
-		img(src='/images/buttons/addButton.png')
+		.pure-g
+			.pure-u-1-2
+				a.button(href='/users/login')
+					img#login(src='/images/buttons/log1.png')
+			.pure-u-2-2
+				a.button(href='/users/add')
+					img#add(src='/images/buttons/add1.png')
+	script(type='text/javascript').
+		$('#login').attr('src') = 'src';
+		console.log($('#login').attr('src'));
 	footer.footer
 		p.pfooter Périples futures ... Victoires prochaines !
