--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -82,7 +82,7 @@ block content
 				br
 				button.pure-button(id="attaque" onclick="start('attaque');") Attaque
 				br
-				button.pure-button(id="commerce" onclick="start('commerce');") Commerce
+				button.pure-button(id="commerce" onclick="commerce.display();") Commerce
 				script(type="text/javascript").
 					document.getElementById('attaque').style.visibility = "hidden";
 					
