--- a/views/index.jade
+++ b/views/index.jade
@@ -3,9 +3,10 @@ extends layouts/layout
 block content
 	.divtitle
 		img.title(src='/images/assets/erkma.png')
-	a.button(href='/users/login')
-		img(src='/images/buttons/loginButton.png')
-	a.button(href='/users/add') Add
-		img(src='/images/buttons/addButton.png')
+	div.buttons
+		a#login(href='/users/login')
+			img(src='/images/buttons/loginButton.png')
+		a#add(href='/users/add')
+			img(src='/images/buttons/addButton.png')
 	footer.footer
 		p.pfooter Périples futures ... Victoires prochaines !
