--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,3 +100,13 @@ margin-left: auto;
   margin: 5%;
   width: 90%;
 }
+
+#Addbutton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-image: url(/images/buttons/add2.png);
+}
+
+#Loginbutton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-image: url(/images/buttons/log2.png);
+}
