Création Upgrade.js (amélioration des ressources)

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -54,6 +54,8 @@ block script
 	script(src='../javascripts/webpd/webpd-latest.js')
 	script(src='../javascripts/webpd/pd-fileutils.js')
 	script(src='../javascripts/game/db/map.js')
+	script(src='../javascripts/game/boot.js')
+	script(src='../javascripts/game/window/upgrade.js')
 	script(src='../javascripts/game/states/city.js')
 	script(src='../javascripts/game/states/planets.js')
 	script(src='../javascripts/game/states/attaque.js')
