--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,6 @@ extends layouts/layout
 block content
 	.divtitle
 	img.title(src='/images/assets/erkma.png')
-	a#Addbutton(type='button', name='Add')
-	a#Loginbutton(type='button', name='Login')
+	a#Addbutton(type='button', name='Add', href='/users/add')
+	a#Loginbutton(type='button', name='Login', href='/users/login')
 	p.pfooter Périples futures ... Victoires prochaines !
