--- a/tools/choose.css
+++ b/tools/choose.css
@@ -1,29 +1,49 @@
-td + img {
-
-  width: 200px;
-  height: 200px;
+img{
+  width: 150px;
+  height: 150px;
 }
 
-/*body{
-  background-image: url(/home/rlicornes/Projet_Father/code/Phaser/public/images/backgrounds/planets.jpg);
-  background-repeat:no-repeat;
-  background-size: cover;
-}*/
-
-
-input {
-    font-size: 30px;
-    border-color: black;
+@font-face {
+  font-family: 'maFonte';
+  src: url('TypoGraphica.otf');
+  font-stretch : normal;
+  font-weight : normal;
+  font-style : normal;
 }
 
-table{
-
+#bouton {
+  border: none;
+  padding: 50px 75px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 40px;
+  background-image: url(CHOIX1.png) ;
 
 }
 
-#Erkma {
+#bouton:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  background-image: url(CHOIX2.png);
+}
+
+aside {
+  position : absolute;
+  margin-left : 30px;
+  font-size: 15px;
+  font-family: Impact,"maFonte", Helvetica, Arial, sans-serif;
+  top:200px;
+  right: 60%;
+  color: white;
+}
+
+h1 {
+  font-family:"maFonte";
+  color: white;
+  font-size: 40px;
+  margin-left: 90px;
+}
+
+table {
   margin-left: 40%;
-  margin-right: 50%;
-  width: 1000px;
-  height: 500px;
 }
