--- a/views/users/choose.jade
+++ b/views/users/choose.jade
@@ -12,27 +12,27 @@ extends layouts/layout
     table(border='0', name='choisir', align='center')
       tr
         td(rowspan='3', align='center')
-          a#bouton(href='./CHOIX1', type='button', name='valid', onClick='receive();')
+          a#bouton(href='../images/buttons/CHOIX1', type='button', name='valid', onClick='receive();')
         td(align='center')
-          img#Glurps(src='/home/rlicornes/Projet_Father/Personnages/Glurps.png')
+          img#Glurps(src='../images/characters/Glurps.png')
         td(align='center')
-          img#Hatburg(src='/home/rlicornes/Projet_Father/Personnages/Hatburg.png')
+          img#Hatburg(src='../images/characters/Hatburg.png')
         td(align='center')
-          img#Laistar(src='/home/rlicornes/Projet_Father/Personnages/Laistar.png')
+          img#Laistar(src='../images/characters/Laistar.png')
       tr
         td(align='center')
-          img#Larva(src='/home/rlicornes/Projet_Father/Personnages/Larva.png')
+          img#Larva(src='../images/characters/Larva.png')
         td(align='center')
-          img#MrMustach(src='/home/rlicornes/Projet_Father/Personnages/MrMustach.png')
+          img#MrMustach(src='../images/characters/MrMustach.png')
         td(align='center')
-          img#Mrsur(src='/home/rlicornes/Projet_Father/Personnages/Mrsur.png')
+          img#Mrsur(src='../images/characters/Mrsur.png')
       tr
         td(align='center')
-          img#Orzren(src='/home/rlicornes/Projet_Father/Personnages/Orzren.png')
+          img#Orzren(src='../images/characters/Orzren.png')
         td(align='center')
-          img#Runorpox(src='/home/rlicornes/Projet_Father/Personnages/Runorpox.png')
+          img#Runorpox(src='../images/characters/Runorpox.png')
         td(align='center')
-          img#Vaex(src='/home/rlicornes/Projet_Father/Personnages/Vaex.png')
+          img#Vaex(src='../images/characters/Vaex.png')
 
     script.
       function receive(){
