Correctif game.jade

--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -63,8 +63,8 @@ block script
 		})
 		
 	// Phaser
-	script(src='../javascripts/phaser/phaser.js')
-	script(src='../javascripts/phaser/phaser-plugin-isometric.js')
+	script(src='../javascripts/phaser/phaser.min.js')
+	script(src='../javascripts/phaser/phaser-plugin-isometric.min.js')
 	script(src='../javascripts/webpd/webpd-latest.js')
 	script(src='../javascripts/webpd/pd-fileutils.js')
 	script(src='../javascripts/game/db/map.js')
