Ajout et correction choose.jade

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -3,6 +3,10 @@ html
 	head
 		link(rel='stylesheet', href='/stylesheets/pure-min.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
+
+		block meta
+		block title
+		block link
 		block libs
 
 	body
