--- a/views/game/game.jade
+++ b/views/game/game.jade
@@ -3,7 +3,7 @@ extends ../layouts/layoutgame
 block libs
 	script(src='../javascripts/jquery.min.js')
 	script(src='../javascripts/socket.io.js')
-
+	
 block script
 	script(type='text/javascript').
 
@@ -73,7 +73,7 @@ block script
 	script(src='../javascripts/game/states/attaque.js')
 	script(src='../javascripts/game/states/commerce.js')
 	script(src='../javascripts/game/game.js')
-
+	
 block content
 	img#image
 	.pure-g
@@ -85,16 +85,14 @@ block content
 			ul.pure-menu-list#planets
 			span.pure-menu-heading my ressources
 			ul.pure-menu-list#ressources
-				
-				
 			br
-			br 
-			button.pure-button(id="planet" onclick="start('planets');") Planets
-			button.pure-button(id="city" onclick="start('city');") City
 			br
-			button.pure-button(id="attaque" onclick="start('attaque');") Attaque
+			button.pure-button(id="planet", onclick="start('planets');") Planets
+			button.pure-button(id="city", onclick="start('city');") City
 			br
-			button.pure-button(id="commerce" onclick="start('commerce');") Commerce
+			button.pure-button(id="attaque", onclick="start('attaque');") Attaque
+			br
+			button.pure-button(id="commerce", onclick="start('commerce');") Commerce
 			script(type="text/javascript").
 				document.getElementById('attaque').style.visibility = "hidden";
 
